--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Retro Tetris</title>
     <style>
+        @font-face {
+            font-family: 'RetroArcade';
+            src: url('/assets/fonts/RetroArcade.ttf') format('truetype');
+        }
         body {
             margin: 0;
             padding: 0;
@@ -13,17 +17,13 @@
             justify-content: center;
             align-items: center;
             min-height: 100vh;
-            font-family: monospace;
-        }
-        #game-container {
-            image-rendering: pixelated;
-            image-rendering: crisp-edges;
+            font-family: 'RetroArcade', monospace;
         }
         #game-container canvas {
+            image-rendering: -moz-crisp-edges;
+            image-rendering: -webkit-crisp-edges;
             image-rendering: pixelated;
             image-rendering: crisp-edges;
-            -webkit-font-smoothing: none;
-            font-smooth: never;
         }
     </style>
 </head>
